# codingmath

./: LICENSE  README.md
CTC-decoding-graph/: README.md  cmd.sh  path.sh  toy_decode_graph.sh
CTC-decoding-graph/data/dict/: toy.dict  toy.word
CTC-decoding-graph/data/lang_2/: G.dot  G.fst  L.dot  L.fst  L_disambig.dot  L_disambig.fst  oov.txt  topo
CTC-decoding-graph/data/lang_2/phones/: align_lexicon.txt  disambig.csl  nonsilence.csl  nonsilence.int  nonsilence.txt  roots.int  roots.txt  sets.txt
CTC-decoding-graph/data/lang_2/tmp/: CLG_1_0.fst  LG.dot  LG.fst  ilabels_1_0
CTC-decoding-graph/data/train/: spk2utt  text  utt2spk  wav.scp
CTC-decoding-graph/exp/mono_ctc_decoding_graph/: CTC.dot  CTC.fst  HCLG.dot  HCLG.fst  disambig_tid.int  phones.txt  words.txt
CTC-decoding-graph/exp/mono_ctc_decoding_graph/phones/: align_lexicon.int
CTC-decoding-graph/exp/tree_mono/: final.mdl  tree
CTC-decoding-graph/local/: toy_format_data.sh  toy_prepare_dict.sh
webrtc-audio-examples/: CMakeLists.txt  run.sh
webrtc-audio-examples/src/: webrtc_audio_processing.cc
